---
config:
  layout: elk
  class:
    defaultRenderer: elk
    nodeSpacing: 55
    rankSpacing: 80
---
classDiagram
direction TB
%% display-width: 48%
%% display-height: 520px

class Model

class ControllerInputPort {
  <<interface>>
  +openFile(inputPath: Path) None
  +handleDrop(paths: list~Path~) None
  +handlePointerPress(point: Point) None
  +handlePointerMove(point: Point) None
  +handlePointerRelease(point: Point) bool
  +handleWheel(deltaX: float, deltaY: float) None
  +handleZoom(anchor: Point, scaleDelta: float) None
  +handleNodeClick(node: BaseNode, popupBBox: BBox) None
  +handleCanvasClick() None
  +clearTree() None
  +confirmRename(text: str) None
  +cancelPopup() None
  +setPlaying(isPlaying: bool) None
  +showNextStep() None
  +exportCanvas(outputPath: Path) None
  +exportSelectedSubgraph(outputPath: Path) None
  +resizeDesktop(width: float, height: float) None
}

class ModelCommandPort {
  <<interface>>
  +loadFile(inputPath: Path) None
  +selectNode(node: BaseNode, popupBBox: BBox) None
  +clearSelection() None
  +clearTree() None
  +renameSelectedNode(text: str) None
  +showStep(index: int) None
  +showPreviousStep() None
  +showNextStep() None
  +setPlaying(isPlaying: bool) None
  +exportCanvas(outputPath: Path) None
  +exportSelectedSubgraph(outputPath: Path) None
  +resizeDesktop(width: float, height: float) None
  +panDesktop(dx: float, dy: float) None
  +zoomDesktopAt(anchor: Point, scaleDelta: float) None
  +resetDesktopViewport() None
}

class NodeEditorPopupView {
  -controller: ControllerInputPort
  -textEntry: QLineEdit
  +bindController(controller: ControllerInputPort) None
  +showState(state: NodeEditorState, width: int, height: int) None
  +hide() None
  +draftText() str
}

class CanvasPopupView {
  -controller: ControllerInputPort
  +bindController(controller: ControllerInputPort) None
  +showAt(x: float, y: float, width: int, height: int, hasTree: bool) None
  +hide() None
  -deleteTree() None
}

class DesktopView {
  -model: Model
  -scene: QGraphicsScene
  -canvas: DesktopGraphicsView
  -nodeEditorPopupView: NodeEditorPopupView
  -canvasPopupView: CanvasPopupView
  -controller: ControllerInputPort
  -canvasRenderer: CanvasRenderer
  -playbackTimer: QTimer
  +bindController(controller: ControllerInputPort) None
  +chooseInputFile() Path | None
  +chooseOutputFile() Path | None
  +renderCanvas() None
  +renderPlaybackControls() None
  +nodeAt(viewPoint: Point) BaseNode | None
  +handleWheelEvent(event: QWheelEvent) bool
  +handleNativeGesture(event: QNativeGestureEvent) bool
  -onNodesChanged() None
  -onLayoutChanged() None
  -onSelectionChanged() None
  -onPlaybackChanged() None
  -onDesktopChanged() None
}

class CanvasRenderer {
  -model: Model
  -scene: QGraphicsScene
  -nodeItems: dict~BaseNode, NodeGraphicsItem~
  -edgeItems: dict~tuple, QGraphicsLineItem~
  +render(width: int, height: int) None
  +syncLayout(width: int, height: int) bool
  +syncViewport(width: int, height: int) bool
  +nodeAt(viewPoint: Point) BaseNode | None
}

class DesktopGraphicsView

class NodeGraphicsItem {
  +node: BaseNode
  +updateFromNode(isSelected: bool) None
}

class Controller {
  -commands: ModelCommandPort
  -pressPoint: Point | None
  -lastDragPoint: Point | None
  -isDragging: bool
  +openFile(inputPath: Path) None
  +handleDrop(paths: list~Path~) None
  +handlePointerPress(point: Point) None
  +handlePointerMove(point: Point) None
  +handlePointerRelease(point: Point) bool
  +handleWheel(deltaX: float, deltaY: float) None
  +handleZoom(anchor: Point, scaleDelta: float) None
  +handleNodeClick(node: BaseNode, popupBBox: BBox) None
  +handleCanvasClick() None
  +clearTree() None
  +confirmRename(text: str) None
  +cancelPopup() None
  +setPlaying(isPlaying: bool) None
  +showPreviousStep() None
  +showNextStep() None
  +seekStep(index: int) None
  +exportCanvas(outputPath: Path) None
  +exportSelectedSubgraph(outputPath: Path) None
  +resizeDesktop(width: float, height: float) None
  +resetDesktopViewport() None
}

class ForestApp {
  -application: QApplication
  -model: Model
  -desktopView: DesktopView
  -controller: Controller
  +build() None
  +run() None
}

DesktopView ..> Model : reads
DesktopView *-- NodeEditorPopupView : popup
DesktopView *-- CanvasPopupView : popup
DesktopView *-- CanvasRenderer : renders
DesktopView *-- DesktopGraphicsView : input surface
CanvasRenderer *-- NodeGraphicsItem : node items
DesktopView --> ControllerInputPort : sends input
NodeEditorPopupView --> ControllerInputPort : sends input
CanvasPopupView --> ControllerInputPort : sends input
Controller ..|> ControllerInputPort : receives input
Controller --> ModelCommandPort : sends messages
Model ..|> ModelCommandPort : receives messages
ForestApp *-- Model : model
ForestApp *-- DesktopView : view
ForestApp *-- Controller : controller

note for DesktopView "PySide6のメイン画面とGraphics Sceneを表示"
note for NodeEditorPopupView "ノード編集と部分画像出力の小窓"
note for CanvasPopupView "Control+左クリックまたは右クリックで開く、画像出力とツリー削除の小窓"
note for CanvasRenderer "Model状態をQGraphicsItemへ差分反映し、ノードを判定"
note for Controller "ModelとViewの状態を参照せず、入力を薄く正規化して更新メッセージへ変換"
note for ForestApp "MVC各要素を構成して起動"

classDef mvc fill:#eaf2ff,stroke:#54749f,color:#20334d,stroke-width:1.5px
cssClass "Model,ModelCommandPort,ControllerInputPort,CanvasRenderer,NodeGraphicsItem,DesktopGraphicsView,NodeEditorPopupView,CanvasPopupView,DesktopView,Controller,ForestApp" mvc
